--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ html{
     font-size: 62.5%;
 }
 body{
-    font-family: 'Montserrat', 'Work Sans', sans-serif;
+    font-family: 'Montserrat', 'Raleway', 'Work Sans', sans-serif;
     line-height: 1.3;
 }
 .banner{
@@ -116,35 +116,58 @@ p {
 .btn:link,
 .btn:visited,
 .btn {
-    font-size: 1.4rem;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 400;
+    font-size: 1.3rem;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 600;
+    padding: 1rem 2.5rem;
     color: #25b6c2;
     background: #ffffff;
     border-radius: 25rem;
     margin-top: 3rem;
 }
   /* NAVBAR */
+
+a.navbar-brand.main-logo{
+    margin-top: 2rem;
+  }
 .nav-item{
-    margin-top: 4rem;
+    margin-top: 3rem !important;
 }
-.navbar .container .btn-a {
-   color: #5480dd;
-   background: #fff;
+.nav-link{
+    font-family: 'Raleway', sans-serif;
+    font-size: 1.4rem;
+    font-weight: 600;
 }
-.navbar .container .btn-a:hover{
+.banner a.btn-a {
+    margin-top: 2.8rem !important;
+    color: #5480dd;
+    background: #fff;
+    margin-right: 2rem;
+    font-family: 'Raleway', sans-serif;
+}
+.banner a.btn-a:hover{
    color: #fff;
    background: #5974de;
    border: .1rem solid #fff;
 }
-.navbar .container .btn-b {
-   color: #fff;
-   background: #5c6ede;
-   border: .1rem solid #fff;
+.banner a.btn-b {
+    margin-top: 2.8rem !important;
+    color: #fff;
+    background: #5a73de;
+    border: .1rem solid #fff;
+    font-family: 'Raleway', sans-serif;
 }
-.navbar .container .btn-b:hover{
+.banner a.btn-b:hover {
    color: #5480dd;
    background: #fff;
+}
+.fa-bars {
+    color: #ee1616;
+    font-size: 3rem;
+    margin-top: 5rem;
+}
+.navbar-toggler {
+    outline: none !important;
 }
    /* BANNER AREA */
 .btn-lg::after {
