--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,7 +13,7 @@ body{
     font-family: 'Montserrat', 'Work Sans', sans-serif;
     line-height: 1.3;
 }
-.banner{
+.heder{
     background: 
     url(bg-img/bg-head.png);
     background-size: cover;
@@ -38,9 +38,6 @@ section{
     background-repeat: no-repeat;
     background-position: center center;
     position: relative;
-}
-.row{
-    width: 117rem;
 }
 .banner{
     background-size: cover;
@@ -125,6 +122,10 @@ p {
     margin-top: 3rem;
 }
   /* NAVBAR */
+
+a.navbar-brand.main-logo {
+    margin-top: .8rem;
+}
 .nav-item{
     margin-top: 4rem;
 }
