--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,9 +13,8 @@ body{
     font-family: 'Montserrat', 'Raleway', 'Work Sans', sans-serif;
     line-height: 1.3;
 }
-.banner{
-    background: 
-    url(bg-img/bg-head.png);
+ .banner{
+    background: url(bg-img/bg-head.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center top;
@@ -161,15 +160,19 @@ a.navbar-brand.main-logo{
    color: #5480dd;
    background: #fff;
 }
-.fa-bars {
-    color: #ee1616;
-    font-size: 3rem;
-    margin-top: 5rem;
-}
 .navbar-toggler {
     outline: none !important;
+    margin-left: 0 auto;
+    color: red;
+  
 }
    /* BANNER AREA */
+
+   .featurette.img-fluid {
+    width: 50%;
+    height: auto;
+}
+
 .btn-lg::after {
    content: '\25b6';
    color: #25b6c2;
