--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,13 +13,17 @@ body{
     font-family: 'Montserrat', 'Raleway', 'Work Sans', sans-serif;
     line-height: 1.3;
 }
- .banner{
+.navbar {
+    width: 114rem;
+    margin-left: 0 auto;
+}
+ .header-section {
     background: url(bg-img/bg-head.png);
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center top;
+    background-position: top top;
     position: relative;
-    height: 95vh;
+    height: 100vh;
 }
 .nav-link{
     color: #fff;
@@ -37,9 +41,6 @@ section{
     background-repeat: no-repeat;
     background-position: center center;
     position: relative;
-}
-.row{
-    width: 117rem;
 }
 .banner{
     background-size: cover;
@@ -60,7 +61,7 @@ h1{
     font-size: 4.2rem;
     color: #fff;
     font-weight: bold;
-    margin-top: 2rem;
+    margin-top: 8rem;
 }
 h2{
     width: 100%;
@@ -136,8 +137,10 @@ p {
     transition: .5s;
 }
   /* NAVBAR */
-
-a.navbar-brand.main-logo{
+.navbar {
+   
+}
+.navbar a.navbar-brand.main-logo{
     margin-top: 2.8rem;
   }
 .nav-item{
@@ -148,65 +151,71 @@ a.navbar-brand.main-logo{
     font-size: 1.4rem;
     font-weight: 600;
 }
-.banner a.btn-a {
+.header-section .top-btn {
+    padding: 0;
+}
+.header-section .top-btn a.btn-a {
     margin-top: 2.8rem !important;
     color: #5480dd;
     background: #fff;
-    margin-right: 2rem;
+    margin-right: 1rem;
     font-family: 'Raleway', sans-serif;
 }
-.banner a.btn-a:hover{
+.header-section .top-btn a.btn-a:hover{
    color: #fff;
    background: #5974de;
    border: .1rem solid #fff;
 }
-.banner a.btn-b {
+.header-section .top-btn a.btn-b {
     margin-top: 2.8rem !important;
     color: #fff;
     background: #5a73de;
     border: .1rem solid #fff;
     font-family: 'Raleway', sans-serif;
 }
-.banner a.btn-b:hover {
+.header-section .top-btn a.btn-b:hover {
    color: #5480dd;
    background: #fff;
 }
 .navbar-toggler {
+    font-size: 4rem;
     outline: none !important;
     margin-left: 0 auto;
-    color: red;
+    color: #FFF;
   
 }
    /* BANNER AREA */
 
-.featurette.img-fluid {
-    width: 50%;
-    height: auto;
-}
+.slider{
+width: 100%;
+height: 100vh;
+position: relative;
 
-.featurette .btn-lg {
+}
+.header-section .slider {
+    position: absolute;
+    left: 50%;
+    top: 70%;
+    transform: translate(-50%, -50%);
+}
+.slider .btn-lg {
     color: #25b6c2;
     background: #fff;
 }
-.featurette .btn-lg:hover {
+.slider .btn-lg:hover {
     color: #fff;
     background: #489dda;
     border: .1rem solid #fff;
 }
-.featurette .btn-lg::after {
+.slider .btn-lg::after {
     content: '\25b6';
     color: #25b6c2;
     margin-left: 1rem;
 }
-.featurette .btn-lg:hover::after {
+.slider .btn-lg:hover::after {
     color: #fff;
 }
-.featurette{
-    position: absolute;
-    top: 60%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
+
 /*  SERVICES SECTION  */
 
 .services-section h3 {
@@ -422,7 +431,7 @@ a.navbar-brand.main-logo{
     color: #262b2f;
 }
 .planing-section .plan-item .check-mark {
-    margin-top: 6rem;
+    margin-top: 5rem;
     font-size: 1.5rem;
     line-height: 2.8;
     color: #535353;
@@ -614,6 +623,9 @@ footer {
 .footer-section .contact-icon a .fas {
     color: #0bd7fc;
 }
+.footer-section .contact-icon {
+    margin-top: 3rem;
+}
 .footer-section .contact-icon a {
     margin-top: 3rem;
     line-height: 3;
@@ -625,6 +637,7 @@ footer {
     font-weight: 600;
     text-transform: capitalize;
     font-size: 1.3rem;
+   
 }
 .footer-section .contact-icon .contact-text:hover {
     color: #25b6c2;
