--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,6 +131,13 @@ p {
     border: .1rem solid #535353;
     transition: .5s;
 }
+.box:hover {
+    box-shadow: 
+    .2rem .2rem .5rem hsla(180, 100%, 50%, 0.5),
+    -.2rem -.2rem .5rem hsla(180, 100%, 50%, 0.5);
+    transition: .5s;
+}
+
   /* NAVBAR */
 .header-menu {
     width: 100%;
@@ -535,7 +542,9 @@ p {
 .coll .btn-lg:hover::after {
     color: #23e1c8;
 }
-
+.collaborate-section .box {
+    padding: 1rem;
+}
 /*  FORM SECTION    */
 .form-section {
     background: url(bg-img/bg-from.png);
@@ -671,3 +680,26 @@ footer {
     font-size: 1.3rem;
 }
 /*  END */
+
+
+
+/* On screens that are 992px or less, set the background color to blue */
+@media screen and (max-width: 992px) {
+    body {
+      background-color: blue;
+    }
+  }
+  
+  /* On screens that are 600px or less, set the background color to olive */
+  @media screen and (max-width: 600px) {
+    body {
+      background-color: olive;
+    }
+  }
+
+/* On screens that are 600px or less, set the background color to olive */
+@media screen and (max-width: 480px) {
+    body {
+        background-color: red;
+    }
+}
